@@ -49,6 +49,8 @@ Version 3   ???
 
 --Added saving of highest level reached.  Can resume at that level next game.
 
+--Press P to pause game.
+
 
 
 Version 2    2010-December-29
